--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,10 @@ environment:
 
 dependencies:
   flutter:
+
     sdk: flutter
+#  shared_preferences: ^2.0.20
+
   cupertino_icons: ^1.0.8
   youtube_player_flutter: ^9.1.1
   video_player: ^2.9.3
