shared pref is enbale

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,11 @@ dependencies:
 
     sdk: flutter
 #  shared_preferences: ^2.0.20
-
+  
   cupertino_icons: ^1.0.8
   youtube_player_flutter: ^9.1.1
   video_player: ^2.9.3
+  shared_preferences: ^2.5.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
